# dev-proxy

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  proxy_control.rs  proxy_server.rs  session_handler.rs  session_manager.rs  socks5.rs
src-tauri/src/commands/: get_proxy_connections.rs  get_proxy_state.rs  mod.rs  start_proxy.rs  stop_proxy.rs
src-tauri/src/models/: app_config.rs
src-tauri/src/protocol/: http.rs  mod.rs  socks5.rs
src/components/sidebar/: sidebar.tsx
src/pages/: [...404].tsx  connections.tsx  index.tsx
